// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table.pagination Accepts pagination as true 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="g-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="g-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="g-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="g-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="g-pagination g-table-pagination g-table-pagination-end css-var-root"
      >
        <li
          aria-disabled="true"
          class="g-pagination-prev g-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="gicon gicon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="g-pagination-next g-pagination-disabled"
          title="Next Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="gicon gicon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.pagination renders pagination correctly 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="g-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="g-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="g-pagination g-table-pagination g-table-pagination-end my-page css-var-root"
      >
        <li
          aria-disabled="true"
          class="g-pagination-prev g-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="gicon gicon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="g-pagination-item g-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          aria-disabled="false"
          class="g-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="g-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="gicon gicon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.pagination renders pagination topLeft and bottomRight 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                    scope="col"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="g-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="g-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="g-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="g-table-row g-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="g-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="g-pagination g-table-pagination g-table-pagination-end css-var-root"
      >
        <li
          aria-disabled="true"
          class="g-pagination-prev g-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="gicon gicon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="g-pagination-item g-pagination-item-1 g-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="g-pagination-next g-pagination-disabled"
          title="Next Page"
        >
          <button
            class="g-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="gicon gicon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.pagination should not crash when trigger onChange in render 1`] = `
<div
  class="css-var-root g-table-css-var g-table-wrapper"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-table g-table-empty css-var-root g-table-css-var"
      >
        <div
          class="g-table-container"
        >
          <div
            class="g-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <thead
                class="g-table-thead"
              >
                <tr>
                  <th
                    class="g-table-cell"
                  />
                </tr>
              </thead>
              <tbody
                class="g-table-tbody"
              >
                <tr
                  class="g-table-placeholder"
                >
                  <td
                    class="g-table-cell"
                  >
                    <div
                      class="css-var-root g-empty g-empty-normal"
                    >
                      <div
                        class="g-empty-image"
                      >
                        <svg
                          height="41"
                          viewBox="0 0 64 41"
                          width="64"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            No data
                          </title>
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            transform="translate(0 1)"
                          >
                            <ellipse
                              cx="32"
                              cy="33"
                              fill="#f5f5f5"
                              rx="32"
                              ry="7"
                            />
                            <g
                              fill-rule="nonzero"
                              stroke="#d9d9d9"
                            >
                              <path
                                d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                              />
                              <path
                                d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                                fill="#fafafa"
                              />
                            </g>
                          </g>
                        </svg>
                      </div>
                      <div
                        class="g-empty-description"
                      >
                        No data
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
